# CPI

./: .gitignore  CMakeLists.txt  README.md  alerts.json  algo_history.json  analyzer.py  backtester.py  dashboard.py  dashboard_qt.py  data.py  debug_signals.py  docker-compose.yml  edge_calculator.py  env_loader.py  main.cpp  requirements.txt  run_demo.py  runtime_config.py  runtime_selection.json  sandbox_runner.py  scanner.py  stream_parquet.py  test_backtest.py
adk_swarm/: __init__.py  coordinator.py
adk_swarm/sub_agents/: __init__.py  algo_architect.py  trade_analyst.py
adk_swarm/sub_agents/pattern_analyst/: __init__.py  agent.py
adk_swarm/sub_agents/risk_analyst/: __init__.py  agent.py
patterns/: __init__.py  base.py  breakout.py  engulfing.py
